--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="https://www.instagram.com/studiokicharme/" target="_blank">📸 Instagram</a>
             </li>
             <li>
-                <a href="https://www.facebook.com/vanessa.marceliino" target="_blank">📱 Facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100085922521150" target="_blank">📱 Facebook</a>
             </li>
             <li>
                 <a href="https://wa.me/message/OHGC3U2KCWESP1" target="_blank">📩 PARCERIAS</a>
